[Fix #82] form labels are no longer wrapped even if they are longer than the input

--- a/src/styles/s-forms.css
+++ b/src/styles/s-forms.css
@@ -95,6 +95,7 @@ svg {
 
 .form-label {
   font-weight: 500;
+  white-space: nowrap;
 }
 
 input:disabled {
